--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "@tanstack/react-query": "^4.28.0",
@@ -17,8 +18,11 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.59.3"
   },
   "devDependencies": {
